build custom launcher for Gatling (#263)
* Add scenario extraction and string scenario (path to script) treating. Move get_script/get_script_path to ScenarioExecutor

* fix dict hashing and add changelog record

* fix scenario representation and fix misprints

* fix empty script field creation

* add examples to documetation

* add unit test

* add gatling launcher builder

* add chmod for launcher script and changelog record

* fix some mistakes, add unit tests

* extend unit test of launcher builder, add debug info for test_double_exec()

* fix debug output

* remove debug output for engine tests

* add jar folder processing, add documentation and fix engine logic to avoid unwanted files in  list

* fix unit test for folder treating

* fix unit test (wrong windows path delimiter)

* reformat, little doc fix

* fix unit tests

* fix log level, make expressions simplier and move scenario convertation logic from Scenario class to get_scenario()

* fix type cast of scenario

* add NO_PAUSE variable

* fix misprint

* fix windows-specific syntax

* add output check

* fix tests under windows

* fix tests under windows

* make analysis of shell script more plain